<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.owmtest.DataFragment"
    tools:ignore="RtlHardcoded">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/error_load_data"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                        android:layout_marginRight="@dimen/card_view_horizontal_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location" />

                        <TextView
                            android:id="@+id/location_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp" />

                    </LinearLayout>

                    <fragment
                        android:id="@+id/map"
                        class="com.google.android.gms.maps.MapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="175dp"
                        android:layout_marginTop="4dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                    android:layout_marginRight="@dimen/card_view_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/conditions" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/pic"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/description_pic" />

                        <TextView
                            android:id="@+id/conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small_margin" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description" />

                        <TextView
                            android:id="@+id/desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small_margin" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/cloudiness"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                    android:layout_marginRight="@dimen/card_view_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/weather" />

                    <TextView
                        android:id="@+id/weather_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/weather_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/weather_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                    android:layout_marginRight="@dimen/card_view_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/wind_data" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/wind_direction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/precip_view"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                    android:layout_marginRight="@dimen/card_view_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/precipitation" />

                    <TextView
                        android:id="@+id/precipitation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_view_horizontal_margin"
                    android:layout_marginRight="@dimen/card_view_horizontal_margin"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/small_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        android:text="@string/astronomical_data" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</FrameLayout>
